--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.8",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
+    "express": "^4.17.19",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.1"
+    "mongoose": "^7.5.1",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
+    "@types/express": "^4.17.19",
+    "@types/jsonwebtoken": "^9.0.3"
   }
 }
