--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/multer": "^1.4.8",
+    "@types/nodemailer": "^6.4.13",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.19",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.19",
-    "@types/jsonwebtoken": "^9.0.3"
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^1.4.8"
   }
 }
