--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+PORT=3000
 MONGO_HOST=mongo
 MONGO_PORT=27017
 MONGO_USERNAME=root
 MONGO_PASSWORD=password
-HOST='smtp.example.com'
-BASE_URL='http://localhost:3000'
+EMAIL_HOST=smtp.example.com
+BASE_URL=http://localhost:3000
