--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.13",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.17.19",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
