--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node dev_server.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +20,16 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.3",
-    "@types/multer": "^1.4.8"
+    "@types/multer": "^1.4.8",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   }
 }
